# quant-portfolio-lab

./: .env.example  .gitignore  README.md  pyproject.toml
api/: main.py  schemas.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx  theme.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/: HoldingsTable.tsx  MetricCard.tsx  PlotlyChart.tsx  RunControls.tsx  ui.tsx
frontend/src/pages/: DashboardPage.tsx  DataHealthPage.tsx  RunsPage.tsx  ShortlistPage.tsx
notebooks/: exploratory_analysis.ipynb
scripts/: load_fundamentals.py  load_prices.py  recommend.py  run_backtest.py
specs/: backtest_policy.yaml  data_source_matrix.csv  quant_portfolio_lab_v0_1_policy.md
src/quant_portfolio_lab/: __init__.py  recommendation.py
src/quant_portfolio_lab/app/: __init__.py  streamlit_app.py
src/quant_portfolio_lab/backtest/: __init__.py  calendar.py  cost_model.py  engine.py  metrics.py
src/quant_portfolio_lab/data/: __init__.py  db.py  loaders.py  synthetic.py
src/quant_portfolio_lab/factors/: __init__.py  valuation.py
src/quant_portfolio_lab/portfolio/: __init__.py  construction.py
src/quant_portfolio_lab/strategies/: __init__.py  composite.py
src/quant_portfolio_lab/visualization/: __init__.py  charts.py
tests/: test_backtest_engine.py  test_cost_model.py  test_factor_calculation.py  test_metrics.py
